--- a/.github/workflows/build-nekoray-cmake.yml
+++ b/.github/workflows/build-nekoray-cmake.yml
@@ -60,10 +60,10 @@ jobs:
       matrix:
         include:
           - platform: windows-2022
-            arch: x64
+            arch: arm64
             qt_version: "6.5"
           - platform: ubuntu-20.04
-            arch: x64
+            arch: arm64
             qt_version: "5.12"
       fail-fast: false
 
